<?xml version="1.0"?>
<package format="2">
  <name>image_repub</name>
  <version>0.0.0</version>
  <description>The image_repub package, repub depth 32 bit as 16 bit</description>
  <maintainer email="joao.moreira.alves@tecnico.ulisboa.pt">jmalves</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>depth_image_proc</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>dept_image_proc</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <export>

  </export>
</package>
